[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vlogging"
version = "0.0.1"
authors = [
    { name="Yuya Honda", email="yuyahnd.info@gmail.com" }
]
description = "Easy to use logger."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

dependencies = []

[project.urls]
"Homepage" = "https://github.com/yuyahnd/vlogging"
"Bug Tracker" = "https://github.com/yuyahnd/vlogging/issues"

[project.optional-dependencies]
dev = [
    "pytest==7.2.1",
    "tox==4.4.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}
